[gd_scene load_steps=10 format=3 uid="uid://jpvquf3kfnfo"]

[ext_resource type="Script" uid="uid://de626hm5lcf2d" path="res://scenes/how_did_we_get_here.gd" id="1_85hib"]
[ext_resource type="Texture2D" uid="uid://sixm8ncp6hii" path="res://assets/staticguyspeach/layer1.png" id="2_8ga6m"]
[ext_resource type="Texture2D" uid="uid://dpy7jdutwqqlw" path="res://assets/staticguyspeach/layer2.png" id="3_57iln"]
[ext_resource type="AudioStream" uid="uid://bdefq3p8dpwbi" path="res://assets/sounds/how_did_we_get_here.wav" id="6_mrpo4"]
[ext_resource type="AudioStream" uid="uid://dkxhpisjhqe1u" path="res://assets/sounds/ambience.wav" id="7_t0lyb"]

[sub_resource type="Gradient" id="Gradient_xw6pw"]
offsets = PackedFloat32Array(0.512987, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_03s0q"]
gradient = SubResource("Gradient_xw6pw")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.1)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_t6yse"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_htu55"]
gradient = SubResource("Gradient_t6yse")
width = 256
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.866667, 0.866667)
metadata/_snap_enabled = true
metadata/_snap_count = 15

[node name="HowDidWeGetHere" type="Node2D"]
script = ExtResource("1_85hib")

[node name="Vignette" type="Sprite2D" parent="."]
process_mode = 1
z_index = 3
position = Vector2(0, -7.62939e-06)
scale = Vector2(30, 16.875)
texture = SubResource("GradientTexture2D_03s0q")
centered = false

[node name="PhoneCall" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("2_8ga6m")
centered = false

[node name="Text" type="Sprite2D" parent="PhoneCall"]
texture = ExtResource("3_57iln")
centered = false

[node name="PointLight2D" type="PointLight2D" parent="PhoneCall/Text"]
position = Vector2(192, 108.8)
texture = SubResource("GradientTexture2D_htu55")

[node name="Timer" type="Timer" parent="PhoneCall/Text"]
wait_time = 2.0
autostart = true

[node name="Black" type="CanvasModulate" parent="."]
z_index = 4096

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
ignore_rotation = false
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="Phonecall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mrpo4")
volume_db = -5.0
autoplay = true

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_t0lyb")
volume_db = -5.0
autoplay = true

[connection signal="timeout" from="PhoneCall/Text/Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="Phonecall" to="." method="_on_phonecall_finished"]
